--- a/Examples/MiniBlink/CMakeLists.txt
+++ b/Examples/MiniBlink/CMakeLists.txt
@@ -8,6 +8,11 @@ project(MiniBlink_STM32F0308DISCOVERY LANGUAGES C CXX)
     target_link_libraries(${PROJECT_NAME} LIBREUCPP_HAL_STM32F030X8)
     target_compile_definitions(${PROJECT_NAME} PUBLIC STM32F0308DISCOVERY)
 
+project(MiniBlink_ADAFRUIT_ATSAMD09_BREAKOUT LANGUAGES C CXX)
+    add_executable(${PROJECT_NAME} miniblink.cpp)
+    target_link_libraries(${PROJECT_NAME} LIBREUCPP_HAL_ATSAMD09D14)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC ADAFRUIT_ATSAMD09_BREAKOUT)
+
 project(MiniBlink_SAMMY_C21 LANGUAGES C CXX)
     add_executable(${PROJECT_NAME} miniblink.cpp)
     target_link_libraries(${PROJECT_NAME} LIBREUCPP_HAL_ATSAMC21X18)
