--- a/HAL/Microchip/ATSAMD09/CMakeLists.txt
+++ b/HAL/Microchip/ATSAMD09/CMakeLists.txt
@@ -1,10 +1,17 @@
 project(LIBREUCPP_HAL_ATSAMD09 LANGUAGES CXX)
-    add_library(${PROJECT_NAME} INTERFACE)
-    target_include_directories(${PROJECT_NAME} INTERFACE include/)
-    target_link_libraries(${PROJECT_NAME} INTERFACE LIBREUCPP_HAL_COMMON_MICROCHIP LIBREUCPP_SETTINGS_ATSAMD09 LIBREUCPP_PERIPH_ATSAMD09)
+    add_library(${PROJECT_NAME} STATIC)
+    target_sources(${PROJECT_NAME} PRIVATE src/Pin.cpp src/Port.cpp)
+    target_include_directories(${PROJECT_NAME} PUBLIC include/)
+    target_link_libraries(
+        ${PROJECT_NAME} PUBLIC 
+            LIBREUCPP_HAL_ARM_COMMON
+            LIBREUCPP_HAL_COMMON_MICROCHIP 
+            LIBREUCPP_SETTINGS_ATSAMD09 
+            LIBREUCPP_PERIPH_ATSAMD09 
+    )
 
 
-foreach(PART ATSAMD09C13A ATSAMD09D14A)
+foreach(PART ATSAMD09C13 ATSAMD09D14)
 
     project(LIBREUCPP_HAL_${PART} LANGUAGES CXX)
         add_library(${PROJECT_NAME} INTERFACE)
