--- a/HAL/Microchip/ATSAMD09/CMakeLists.txt
+++ b/HAL/Microchip/ATSAMD09/CMakeLists.txt
@@ -1,6 +1,13 @@
 project(LIBREUCPP_HAL_ATSAMD09 LANGUAGES CXX)
     add_library(${PROJECT_NAME} STATIC)
-    target_sources(${PROJECT_NAME} PRIVATE src/Pin.cpp src/Port.cpp src/DPLL.cpp src/DFLL.cpp)
+    target_sources(
+        ${PROJECT_NAME} PRIVATE 
+            src/Pin.cpp 
+            src/Port.cpp 
+            src/DPLL.cpp 
+            src/DFLL.cpp 
+            src/PM.cpp
+    )
     target_include_directories(${PROJECT_NAME} PUBLIC include/)
     target_link_libraries(
         ${PROJECT_NAME} PUBLIC 
