--- a/HAL/Microchip/Common/CMakeLists.txt
+++ b/HAL/Microchip/Common/CMakeLists.txt
@@ -1,4 +1,11 @@
 project(LIBREUCPP_HAL_COMMON_MICROCHIP LANGUAGES CXX)
-
 add_library(${PROJECT_NAME} INTERFACE)
+target_sources(
+    ${PROJECT_NAME} INTERFACE
+        include/LibreUCpp/HAL/Pin.h
+        include/LibreUCpp/HAL/Port.h
+        include/LibreUCpp/HAL/XOSC.h
+        include/LibreUCpp/HAL/XOSC32K.h
+        include/LibreUCpp/HAL/NVM.h
+)
 target_include_directories(${PROJECT_NAME} INTERFACE include/)
