add clock class

--- a/Examples/SystickBlink/CMakeLists.txt
+++ b/Examples/SystickBlink/CMakeLists.txt
@@ -8,6 +8,11 @@ project(SystickBlink_STM32F0308DISCOVERY LANGUAGES C CXX)
     target_link_libraries(${PROJECT_NAME} LIBREUCPP_HAL_STM32F030X8)
     target_compile_definitions(${PROJECT_NAME} PUBLIC STM32F0308DISCOVERY)
 
+project(SystickBlink_ADAFRUIT_ATSAMD09_BREAKOUT LANGUAGES C CXX)
+    add_executable(${PROJECT_NAME} SystickBlink.cpp)
+    target_link_libraries(${PROJECT_NAME} LIBREUCPP_HAL_ATSAMD09D14)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC ADAFRUIT_ATSAMD09_BREAKOUT)
+
 project(SystickBlink_SAMMY_C21 LANGUAGES C CXX)
     add_executable(${PROJECT_NAME} SystickBlink.cpp)
     target_link_libraries(${PROJECT_NAME} LIBREUCPP_HAL_ATSAMC21X18)
