ATSAM: adapt SAMC UART for SAMD

--- a/HAL/Microchip/ATSAMC21/CMakeLists.txt
+++ b/HAL/Microchip/ATSAMC21/CMakeLists.txt
@@ -8,11 +8,20 @@ project(LIBREUCPP_HAL_ATSAMC21 LANGUAGES CXX)
         include/LibreUCpp/HAL/GCLK.h
         include/LibreUCpp/HAL/MCLK.h src/MCLK.cpp
         include/LibreUCpp/HAL/OSC48M.h
-        include/LibreUCpp/HAL/UART.h src/UART.cpp
         src/Pin.cpp
         src/Port.cpp
+        ../Common/include/LibreUCpp/HAL/UART.h ../Common/src/UART.cpp
     )
     target_include_directories(${PROJECT_NAME} PUBLIC include/)
+    target_compile_definitions(
+        ${PROJECT_NAME} PUBLIC
+        LIBREUCPP_HAL_HAS_SERCOM0
+        LIBREUCPP_HAL_HAS_SERCOM1
+        LIBREUCPP_HAL_HAS_SERCOM2
+        LIBREUCPP_HAL_HAS_SERCOM3
+        LIBREUCPP_HAL_HAS_SERCOM4
+        LIBREUCPP_HAL_HAS_SERCOM5
+    )
     target_link_libraries(${PROJECT_NAME} PUBLIC LIBREUCPP_HAL_COMMON_MICROCHIP LIBREUCPP_SETTINGS_ATSAMC21 LIBREUCPP_PERIPH_ATSAMC21 LIBREUCPP_HAL_ARM_COMMON)
 
 
