STM32: unify Port code

--- a/HAL/ST/STM32F030/CMakeLists.txt
+++ b/HAL/ST/STM32F030/CMakeLists.txt
@@ -4,12 +4,22 @@ project(LIBREUCPP_HAL_STM32F030xx LANGUAGES CXX)
     )
     target_sources(
         ${PROJECT_NAME} PUBLIC
+            ../Common/include/LibreUCpp/HAL/RCC_STM32_Common.h
+            ../Common/include/LibreUCpp/HAL/ClockConfigTypes.h
+            ../Common/include/LibreUCpp/HAL/Clock.h
+            ../Common/include/LibreUCpp/HAL/Port.h ../Common/src/Port.cpp
+            ../Common/include/LibreUCpp/HAL/Pin.h ../Common/src/Pin.cpp
             include/LibreUCpp/HAL/ClockConfig.h
             include/LibreUCpp/HAL/RCC.h
             include/LibreUCpp/HAL/BusClockManager.h
-            ../Common/src/Pin.cpp
-            src/Port_STM32F030.cpp
-            
+    )
+    target_compile_definitions(
+        ${PROJECT_NAME} PUBLIC
+            LIBREUCPP_HAL_HAS_GPIOA
+            LIBREUCPP_HAL_HAS_GPIOB
+            LIBREUCPP_HAL_HAS_GPIOC
+            LIBREUCPP_HAL_HAS_GPIOD
+            LIBREUCPP_HAL_HAS_GPIOF
     )
     target_include_directories(${PROJECT_NAME} PUBLIC include/ ../Common/include/)
     target_link_libraries(${PROJECT_NAME} PUBLIC LIBREUCPP_SETTINGS_STM32F030 LIBREUCPP_PERIPH_STM32F030 LIBREUCPP_HAL_ARM_COMMON)
