--- a/HAL/ST/STM32F407/CMakeLists.txt
+++ b/HAL/ST/STM32F407/CMakeLists.txt
@@ -5,11 +5,23 @@ project(LIBREUCPP_HAL_STM32F407xx LANGUAGES CXX)
             ../Common/include/LibreUCpp/HAL/RCC_STM32_Common.h
             ../Common/include/LibreUCpp/HAL/ClockConfigTypes.h
             ../Common/include/LibreUCpp/HAL/Clock.h
-            include/LibreUCpp/HAL/ClockConfig.h
-            ../Common/include/LibreUCpp/HAL/Port.h src/Port_STM32F407.cpp
+            ../Common/include/LibreUCpp/HAL/Port.h ../Common/src/Port.cpp
             ../Common/include/LibreUCpp/HAL/Pin.h ../Common/src/Pin.cpp
+            include/LibreUCpp/HAL/ClockConfig.h
             include/LibreUCpp/HAL/RCC.h
             include/LibreUCpp/HAL/BusClockManager.h
+    )
+    target_compile_definitions(
+        ${PROJECT_NAME} PUBLIC
+            LIBREUCPP_HAL_HAS_GPIOA
+            LIBREUCPP_HAL_HAS_GPIOB
+            LIBREUCPP_HAL_HAS_GPIOC
+            LIBREUCPP_HAL_HAS_GPIOD
+            LIBREUCPP_HAL_HAS_GPIOE
+            LIBREUCPP_HAL_HAS_GPIOF
+            LIBREUCPP_HAL_HAS_GPIOG
+            LIBREUCPP_HAL_HAS_GPIOH
+            LIBREUCPP_HAL_HAS_GPIOI
     )
     target_include_directories(
         ${PROJECT_NAME} PUBLIC 
