--- a/tools/SvdCodeGenerator/controllers.yml
+++ b/tools/SvdCodeGenerator/controllers.yml
@@ -112,15 +112,22 @@ STM32F072:
     GPIOA: GPIO
     USART1: USART
     UART4: UART
-    UART5: UART
     SPI1: SPI
-    I2S2ext: SPI
     I2C1: I2C
     CAN1: CAN
     DMA1: DMA
-    SAI1: SAI
     Flash: FLASH
   variants:
+    STM32F072X8:
+      rom: { base: 0x08000000, size: 64K }
+      ram: { base: 0x20000000, size: 16K }
+      heap: 10K
+      stack: 768
+    STM32F072XB:
+      rom: { base: 0x08000000, size: 128K }
+      ram: { base: 0x20000000, size: 16K }
+      heap: 10K
+      stack: 768
 
 STM32F103:
   cpu: M3
