--- a/Peripherals/CMakeLists.txt
+++ b/Peripherals/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(ARM)
 add_subdirectory(ATSAMC21)
 add_subdirectory(ATSAMD09)
 add_subdirectory(STM32F030)
+add_subdirectory(STM32F042)
 add_subdirectory(STM32F072)
 add_subdirectory(STM32F103)
 add_subdirectory(STM32F107)
