--- a/Examples/UART/CMakeLists.txt
+++ b/Examples/UART/CMakeLists.txt
@@ -7,3 +7,8 @@ project(UART_STM32F0308DISCOVERY LANGUAGES CXX)
     add_executable(${PROJECT_NAME} UART.cpp)
     target_link_libraries(${PROJECT_NAME} LIBREUCPP_HAL_STM32F030X8)
     target_compile_definitions(${PROJECT_NAME} PUBLIC STM32F0308DISCOVERY)
+
+project(UART_STM32F072DISCOVERY LANGUAGES CXX)
+    add_executable(${PROJECT_NAME} UART.cpp)
+    target_link_libraries(${PROJECT_NAME} LIBREUCPP_HAL_STM32F072XB)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC STM32F072DISCOVERY)
